Fixed CSS problem where a bullet list inside of an admonition was being overlapped by the admonition text. (#718)

--- a/source/_themes/otc_tcs_sphinx_theme/static/tcs_theme.css
+++ b/source/_themes/otc_tcs_sphinx_theme/static/tcs_theme.css
@@ -273,6 +273,10 @@ th,td {
     margin-bottom: 10px;
 }
 
+div.admonition ul {
+  margin-top: 20px;
+}
+
 div#trademarks {
     color: gray;
 }
